@@ -1,3 +1,10 @@
+Sat Jan 22 11:21:40 2011  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/parser.c (parse): fixing off-by-one error on line numbers
+	  in parse exceptions.  [ruby-core:34690]
+
+	* test/psych/test_parser.rb: test for error
+
 Wed Jan 19 13:04:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* proc.c (proc_call): Add gc guard to avoid segfault. The fix
